--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,8 +5,8 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-	<link rel="stylesheet" href="{{ url_for('static', filename='custom.css') }}">
-	<link rel="icon" type="image/icon-x" href="{{ url_for('static', filename='toolmux-logo/svg/logo-no-background.svg') }}">
+	<link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css') }}">
+	<link rel="icon" type="image/icon-x" href="{{ url_for('static', filename='images/toolmux-logo/svg/logo-no-background.svg') }}">
     </head>
     <body>
 	{% include 'navigation.html' %}
