--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -5,14 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ title }} - Toolmux</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="{{ url_for('static', filename='signin.css') }}" rel="stylesheet">
-    <link href="{{ url_for('static', filename='toolmux-logo/svg/logo-black.svg') }}" rel="icon" type="image/x-icon">
+    <link href="{{ url_for('static', filename='css/signin.css') }}" rel="stylesheet">
+    <link href="{{ url_for('static', filename='images/toolmux-logo/svg/logo-black.svg') }}" rel="icon" type="image/x-icon">
   </head>
   <body class="d-flex align-items-center py-4 bg-body-tertiary">
     <main class="form-signin w-100 m-auto">
 	<form action="" method="post">
 	    {{ form.hidden_tag() }}
-	    <img class="mb-4" src="{{ url_for('static', filename='toolmux-logo/svg/logo-no-background.svg') }}" alt="" width="72" height="57">
+	    <img class="mb-4" src="{{ url_for('static', filename='images/toolmux-logo/svg/logo-no-background.svg') }}" alt="" width="72" height="57">
 	    <h1 class="h3 mb-3 fw-normal">{{ title }}</h1>
 
 	    <div class="form-floating">
