--- a/app/templates/edit.html
+++ b/app/templates/edit.html
@@ -16,6 +16,12 @@
 
     {{ form.alias.label }}<br>
     {{ form.alias(class="form-control") }}
+
+    {{ form.custom_alias.label }}<br>
+    {{ form.custom_alias(class="form-control") }}
+
+    {{ form.name_repository.label }}<br>
+    {{ form.name_repository(class="form-control") }}
         
     {{ form.link.label }}<br>
     {{ form.link(class="form-control") }}
