--- a/app/templates/visualizar.html
+++ b/app/templates/visualizar.html
@@ -8,22 +8,37 @@
 <dl>
   <dt>ID</dt>
   <dd>{{ tool.id }}</dd>
+
   <dt>Nome</dt>
   <dd>{{ tool.name }}</dd>
+
   <dt>Autor</dt>
   <dd>{{ tool.author }}</dd>
-  <dt>Alias</dt>
+
+  <dt>Apelido</dt>
   <dd>{{ tool.alias }}</dd>
+
+  <dt>Apelido customizado </dt>
+  <dd>{{ tool.custom_alias }}</dd>
+
+  <dt>Nome do repositório</dt>
+  <dd>{{ tool.name_repository }}</dd>
+
   <dt>Link</dt>
   <dd>{{ tool.link }}</dd>
+
   <dt>Tipo de instalação</dt>
   <dd>{{ tool.type_install }}</dd>
+
   <dt>Categoria</dt>
   <dd>{{ tool.category }}</dd>
+
   <dt>Dependencias</dt>
   <dd>{{ tool.dependencies }}</dd>
+
   <dt>Criado em</dt>
   <dd>{{ tool.created }}</dd>
+
   <dt>Modificado em</dt>
   <dd>{{ tool.modified }}</dd>
 </dl>
