--- a/app/templates/visualizar.html
+++ b/app/templates/visualizar.html
@@ -25,7 +25,7 @@
   <dd>{{ tool.name_repository }}</dd>
 
   <dt>Link</dt>
-  <dd>{{ tool.link }}</dd>
+  <dd style="overflow:auto;">{{ tool.link }}</dd>
 
   <dt>Tipo de instalação</dt>
   <dd>{{ tool.type_install }}</dd>
