--- a/app/templates/cadastrar.html
+++ b/app/templates/cadastrar.html
@@ -15,7 +15,7 @@
     {{ form.author(class="form-control", placeholder="Ex: Gordon Lyon") }}
 
     {{ form.alias.label }}<br>
-    {{ form.alias(class="form-control", placeholder="Ex: nmap") }}
+    {{ form.alias(class="form-control", placeholder="Opcional") }}
 
     {{ form.name_repository.label }}<br>
     {{ form.name_repository(class="form-control", placeholder="Opcional") }}
@@ -24,7 +24,7 @@
     {{ form.custom_alias(class="form-control", placeholder="Ex: Opcional") }}
         
     {{ form.link.label }}<br>
-    {{ form.link(class="form-control", placeholder="Link do repositório ou instalador") }}
+    {{ form.link(class="form-control", placeholder="Opcional") }}
         
     {{ form.type_install.label }}<br>
     {{ form.type_install(class="form-select") }}
