--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -49,6 +49,11 @@
 
     	    <div class="form-floating">
 		{{ form.password2(class="form-control", placeholder="Repeat Password") }}
+		{% for error in form.password.errors %}
+		<p style="padding-left:5px;color:red;">
+		    {{ error }}
+		</p>
+		{% endfor %}
 		{{ form.password2.label }}
 	    </div><br>
 
