--- a/app/templates/navigation.html
+++ b/app/templates/navigation.html
@@ -29,6 +29,11 @@
 	</li>
 
 	<li class="nav-item">
+	  <a class="nav-link" aria-current="page" href="{{ url_for('profile') }}">Perfil
+	  </a>
+	</li>
+
+	<li class="nav-item">
 	  <a class="nav-link" aria-current="page" href="{{ url_for('logout') }}">Sair</a>
 	</li>
       </ul>
