--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,28 +1,27 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-    <head>
-	<title>{{ title }} - Toolmux</title>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-	<link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css') }}">
-	<link rel="icon" type="image/icon-x" href="{{ url_for('static', filename='images/toolmux-logo/svg/logo-no-background.svg') }}">
-    </head>
-    <body>
-	{% include 'navigation.html' %}
-	<div class="container">
-	{% with messages = get_flashed_messages() %}
-	{% for message in messages %}
-	  <div class="alert alert-light" role="alert">
-	  {{ message }}
-	  </div>
-	{% endfor %}
-      	{% endwith %}
-        
-	{% block content %}{% endblock %}
-        </div>
+  <head>
+  	<title>{{ title }} - Toolmux</title>
+  	<meta charset="utf-8">
+  	<meta name="viewport" content="width=device-width, initial-scale=1">
+  	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  	<link rel="stylesheet" href="{{ url_for('static', filename='css/custom.css') }}">
+  	<link rel="icon" type="image/icon-x" href="{{ url_for('static', filename='images/toolmux-logo/svg/logo-no-background.svg') }}">
+  </head>
+  <body>
+  	{% include 'navigation.html' %}
+  	<div class="container">
+  	{% with messages = get_flashed_messages() %}
+  	{% for message in messages %}
+  	  <div class="alert alert-light" role="alert">
+  	  {{ message }}
+  	  </div>
+  	{% endfor %}
+    {% endwith %}
+  	{% block content %}{% endblock %}
+    </div>
 
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-	<script src="{{ url_for('static', filename='js/custom.js') }}">
-    </body>
+  	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+  	<script src="{{ url_for('static', filename='js/custom.js') }}"></script>
+  </body>
 </html>
