--- a/app/templates/edit.html
+++ b/app/templates/edit.html
@@ -6,7 +6,7 @@
     <a class="btn btn-primary" href="{{ url_for('listar') }}" role="button">Listar</a>
 </div>
 
-<form action="" method="POST">
+<form action="" method="POST" class="form-edita">
     {{ form.hidden_tag() }}
     {{ form.name.label }}<br>
     {{ form.name(class="form-control", placeholder="Nmap") }}
